tests/EtaX/EtaX.meth1/EtaX.meth1.04.check
// 2.13-base exitCode: 0   val t5e: Any => Any = { val t = meth1 _ ; t } // ?/ok
// 2.13-head exitCode: 0   val t5e: Any => Any = { val t = meth1 _ ; t } // ?/ok
// 2.13-new exitCode: 0   val t5e: Any => Any = { val t = meth1 _ ; t } // ?/ok
// 3.0-old exitCode: 0   val t5e: Any => Any = { val t = meth1 _ ; t } // ?/ok
// 3.0 exitCode: 0   val t5e: Any => Any = { val t = meth1 _ ; t } // ?/ok
// 3.1 exitCode: 1   val t5e: Any => Any = { val t = meth1 _ ; t } // ?/ok
-- Error: /d/shisa/target/tests/EtaX/EtaX.meth1/EtaX.meth1/EtaX.meth1.04.scala:13:40 
13 |  val t5e: Any => Any = { val t = meth1 _ ; t } // ?/ok
   |                                  ^^^^^^^
   |                       The syntax `<function> _` is no longer supported;
   |                       you can simply leave out the trailing ` _`
1 error found
